--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>1st-Assignment</title>
 </head>
 <body>
-    
+    <header class="banner">
+        <div class="banner-img">
+            <img src="assets/Group.png" alt="">
+        </div>
+        <div class="banner-content">
+            <h2 class="banner-title">"In the near future, I hope to become a Developer."</h2>
+            <p class="banner-subtitle">I may not be a developer yet, but I’m working hard to become one.
+            With patience, practice, and passion, I believe my dream will soon turn into reality.</p>
+        </div>
+        <div class="btn">
+            <a href=""><button class="banner-btn">Contact with me</button></a>
+        </div>
+    </header>
 </body>
 </html>
